@@ -179,3 +179,5 @@ Version 1.6.1
 * Fixed the remove logic of StepIterator
 
 * Fixed the potential bug of RubyArray#pack
+
+* Defensive copies are made while constructing CombinationIterator, PermutationIterator, RepeatedCombinationIterator, RepeatedPermutationIterator, ProductIterator and ZipIterator
